<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fonscomentaris"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="50dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/lblTitol"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/Titol"
            android:textSize="17sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextTitol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="*" 
            android:textStyle="bold" 
            android:textColor="#FF0000"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/lblTema"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Tema"
            android:textSize="17sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextTema"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" >
        </EditText>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="*" 
            android:textStyle="bold"
            android:textColor="#FF0000"/>

    </LinearLayout>

   

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/lblDescripcio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Descripcio"
            android:textSize="17sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextDescripcio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="*"
            android:textStyle="bold"
            android:textColor="#FF0000" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.62" >

        <Button
            android:id="@+id/btnHola"
            style="@style/textboto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/botovermell"
            android:onClick="btnHolaClick"
            android:text="@string/Afegir" />

    </LinearLayout>

</LinearLayout>